--- a/Web/D3/style.css
+++ b/Web/D3/style.css
@@ -35,12 +35,19 @@ body {
     outline: none;
     box-shadow:
         70px 7px 80px rgba(0, 0, 0, 0.07);
+    border-bottom: 2px solid transparent;
+}
+
+.login-input:focus {
+    border-bottom: 2px solid #39e22d;
+}
+.login-input:hover {
+    border-bottom: 2px solid #8E2DE2;
 }
 
 .login-btn {
     padding: 1rem;
     width: 85%;
-    border: 0px;
     border-radius: 4px;
     outline: none;
     background: #8E2DE2;
@@ -51,4 +58,11 @@ body {
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     color: #fff;
     font-weight: bold;
+    cursor: pointer;
+    border: none;
+}
+
+.login-btn:hover {
+    box-shadow:
+        70px 7px 80px rgba(0, 0, 0, 0.07);
 }
